--- a/css/mobile.css
+++ b/css/mobile.css
@@ -118,3 +118,15 @@ footer {
   text-align: center;
   font-style: italic;
 }
+.redBack {
+  background-color: #be1c26;
+}
+
+.greenBack {
+  background-color: #398d38;
+}
+
+.blueBack {
+  background-color: #163b59;
+  color: #fff;
+}
